@@ -12,10 +12,10 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMacOSXNotify.c,v 1.15 2005/12/08 07:50:14 das Exp $
+ * RCS: @(#) $Id: tkMacOSXNotify.c,v 1.16 2006/03/28 02:43:24 das Exp $
  */
 
-#include "tkInt.h"
+#include "tkMacOSXInt.h"
 #include "tkMacOSXEvent.h"
 #include <pthread.h>
 
